changed contact us page

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "animate.css": "^4.1.0",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-animista": "^1.0.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.7",
