--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "animate.css": "^4.1.0",
     "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "react": "^16.12.0",
@@ -17,7 +16,8 @@
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.7",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": " PORT=8080 react-scripts start",
