--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
+    "googleapis": "^55.0.0",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4"
   }
