--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://darcipons.github.io/revanix/",
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -19,14 +23,16 @@
   "bugs": {
     "url": "https://github.com/darcipons/revanix/issues"
   },
-  "homepage": "https://github.com/darcipons/revanix#readme",
   "dependencies": {
+    "-": "0.0.1",
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "googleapis": "^55.0.0",
     "nodemailer": "^6.4.10",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "save-dev": "0.0.1-security"
   }
 }
